2011-08-25 Johannes Erdmann <johannes.erdmann@cern.ch>

	* major internal clean-up for the handling of b-tagging
	* changing from global b-tagging working points to per-jet efficiencies and rejections
	* needed to adopt Particles::AddParticle(...)
	* tag KLFitter-00-05-00

2011-08-16 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* InterfaceD3PD: Removed unused mc variables (mc_barcode, mc_children, mc_parents)
	* tag KLFitter-00-04-26


2011-08-09 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* InterfaceOutput,TreeModelDeleteAllButNBestPermutations(unsigned int n):
    Method rewritten to delete all but the N best permutations 
	* cmt/SymLinkHeaders: Safety update as recommended by Venkat
	* tag KLFitter-00-04-25

2011-08-08 Johannes Erdmann <johannes.erdmann@cern.ch>

	* InterfaceOutput : adding method to delete all but the best permutation

2011-08-01 Fabian Kohn <fabian.kohn@phys.uni-goettingen.de>

	* LikelihoodTopLeptonJets.cxx: Major bugfix in CalculateLorentzVectors().
	* tag KLFitter-00-04-24

2011-08-01 Fabian Kohn <fabian.kohn@phys.uni-goettingen.de>

	* Fitter.cxx: Changed vector element access everywhere for consistency (at() -> []).
	* Particles.cxx: Changed vector element access everywhere for consistency (at() -> []).
	* Permutations.cxx: Changed vector element access everywhere for consistency (at() -> []).
	* ResGauss.cxx: Changed vector element access everywhere for consistency (at() -> []).
	* ResolutionBase.cxx: Changed vector element access everywhere for consistency (at() -> []).

2011-08-01 Fabian Kohn <fabian.kohn@phys.uni-goettingen.de>

	* ResDoubleGaussE_1.h: Simplified CheckDoubleGaussianSanity() code (make better use of return value).
	* LikelihoodTopLeptonJets.cxx: Major performance increase for CalculateLorentzVectors() by using static values and removal of unnecessary extra variable assignments.